# tutor-catalog-extensions

./: .gitignore  pyproject.toml  setup.py
tutor_catalog_extensions/: plugin.py
tutor_catalog_extensions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tutor_catalog_extensions/catalog_extensions/: apps.py
tutor_catalog_extensions/cba_catalog_extensions/: apps.py  urls.py
